syntax = "proto3";

package project.planton.provider.kubernetes.addon.istiokubernetes.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/kubernetes/addon/istiokubernetes/v1/spec.proto";
import "project/planton/provider/kubernetes/addon/istiokubernetes/v1/stack_outputs.proto";
import "project/planton/shared/metadata.proto";

//istio-kubernetes
message IstioKubernetes {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'IstioKubernetes'];

  //metadata
  project.planton.shared.ApiResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  IstioKubernetesSpec spec = 4 [(buf.validate.field).required = true];

  //status
  IstioKubernetesStatus status = 5;
}

//istio-kubernetes status.
message IstioKubernetesStatus {
  //stack-outputs
  IstioKubernetesStackOutputs outputs = 1;
}
